--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <h3 class="text-animation">
                 <span></span>
             </h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti aperiam quasi, veritatis at excepturi
-                expedita, eligendi animi ad neque ipsa doloribus, nisi rerum. Quae quas vel veniam molestias deleniti
-                reprehenderit neque repellendus animi laborum omnis, dicta accusantium ex vero provident ducimus. Veniam
-                repellat recusandae natus architecto eaque sequi est dolorum.</p>
+            <p>I am a versatile software and website developer with a passion for crafting innovative digital solutions that empower businesses and delight users. With 2yr of experience in the industry, I have honed my skills in both front-end and back-end development, specializing in creating dynamic web applications and scalable software solutions.</p>
+            <br>
+            <li>Proficient in a variety of programming languages and technologies, including HTML5, CSS, JavaScript, React.js, </li>
+            <br>
             <a href="#" class="btn">Read more</a>
         </div>
         <div class="about-img">
@@ -79,32 +79,45 @@
             <div class="service-box">
                 <div class="service-info">
                     <h4>Android developer</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quaerat quo, quis quod
-                        ullam eius quasi ipsa tenetur eligendi nemo?</p>
+                    <p>I am a passionate Android developer with a strong foundation in Java and XHTML programming languages. With of experience in the field, I have successfully crafted a diverse range of Android applications that cater to various user needs and preferences.</p>
                 </div>
             </div>
 
-            <div class="service-box">
-                <div class="service-info">
+            <div class="service-boxk">
+                <div class="service-infok">
                     <h4>website developer</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quaerat quo, quis quod
-                        ullam eius quasi ipsa tenetur eligendi nemo?</p>
+                    <p>I am a dedicated website developer with a passion for  intuitive web experiences. With of experience in the industry, I have honed my skills in front-end and back-end development,  efficient code and user-centric design principles.
+                    </p>
+                    <br>
+                    <li>Proficient in HTML5, CSS3, JavaScript, and modern web development frameworks/libraries such as React, Vue.js, or Angular.</li>
+                    <br>
+                        <li>Experienced in responsive web design techniques to ensure seamless user experiences across devices and screen sizes.</li>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
                     <h4>software tester</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quaerat quo, quis quod
-                        ullam eius quasi ipsa tenetur eligendi nemo?</p>
+                    <ul>
+                        <li>Proficient in manual and automated testing methodologies, including test planning, test case design, execution, and results analysis.</li>
+                        <br>
+                        <li>Experienced in using a variety of testing techniques, such as functional testing, regression testing, performance testing, usability testing, and exploratory testing.</li>
+                    </ul>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
                     <h4>Backend developer</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quaerat quo, quis quod
-                        ullam eius quasi ipsa tenetur eligendi nemo?</p>
+                    <p>
+                        <ul>
+                            <li>
+                                Proficient in server-side programming languages such as Node.js, Python (with frameworks like Django or Flask), Ruby (with Ruby on Rails), or Java (with Spring Boot)
+                            </li>
+                            <br>
+                            <li>Experienced in database management systems including relational databases like MySQL, PostgreSQL, and non-relational databases like MongoDB, Redis, and Elasticsearch.</li>
+                        </ul>
+                    </p>
                 </div>
             </div>
 
