--- a/index.html
+++ b/index.html
@@ -83,15 +83,14 @@
                 </div>
             </div>
 
-            <div class="service-boxk">
-                <div class="service-infok">
+            <div class="service-box">
+                <div class="service-info">
                     <h4>website developer</h4>
                     <p>I am a dedicated website developer with a passion for  intuitive web experiences. With of experience in the industry, I have honed my skills in front-end and back-end development,  efficient code and user-centric design principles.
                     </p>
                     <br>
                     <li>Proficient in HTML5, CSS3, JavaScript, and modern web development frameworks/libraries such as React, Vue.js, or Angular.</li>
-                    <br>
-                        <li>Experienced in responsive web design techniques to ensure seamless user experiences across devices and screen sizes.</li>
+                   
                 </div>
             </div>
 
