--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="https://www.linkedin.com/in/shikhar-s-b2b66024b/"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://www.instagram.com/shikhar_lala?igsh=MW5scnFwMTA2NnZmbA=="><i
                         class='bx bxl-instagram'></i></a>
-                <a href="#"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://wa.me/919653030366"><i class='bx bxl-whatsapp'></i></a>
                 <a href="https://www.facebook.com/shikhar.srivastava.71465?mibextid=ZbWKwL"><i
                         class='bx bxl-facebook-circle'></i></a>
             </div>
