--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="input-box">
                 <input type="number" placeholder="enter your number">
             </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="your massage"></textarea>
+            <textarea name="" id="" cols="30" rows="10" placeholder="your message"></textarea>
             <input type="submit" value="send massage" class="btn">
         </form>
     </section>
