--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <h3 class="text-animation">
                 <span></span>
             </h3>
-            <p>I am a versatile software and website developer with a passion for crafting innovative digital solutions that empower businesses and delight users. With 2yr of experience in the industry, I have honed my skills in both front-end and back-end development, specializing in creating dynamic web applications and scalable software solutions.</p>
+            <p>I am a versatile software and website developer with a passion for crafting innovative digital solutions that empower businesses and delight users. With 2yr of experience in the industry, I have honed my skills in both front-end and back-end development, specializing in creating dynamic Android applications and scalable software solutions.</p>
             <br>
-            <li>Proficient in a variety of programming languages and technologies, including HTML5, CSS, JavaScript, React.js, </li>
+            <li>Proficient in a variety of programming languages and technologies, including kotlin, XML, HTML AND CSS  </li>
             <br>
             <a href="#" class="btn">Read more</a>
         </div>
@@ -79,7 +79,7 @@
             <div class="service-box">
                 <div class="service-info">
                     <h4>Android developer</h4>
-                    <p>I am a passionate Android developer with a strong foundation in Java and XHTML programming languages. With of experience in the field, I have successfully crafted a diverse range of Android applications that cater to various user needs and preferences.</p>
+                    <p>I am a passionate Android developer with a strong foundation in Kotlin, XML, MVVM & API'S. With of experience in the field, I have successfully crafted a diverse range of Android applications that cater to various user needs and preferences.</p>
                 </div>
             </div>
 
@@ -89,7 +89,7 @@
                     <p>I am a dedicated website developer with a passion for  intuitive web experiences. With of experience in the industry, I have honed my skills in front-end and back-end development,  efficient code and user-centric design principles.
                     </p>
                     <br>
-                    <li>Proficient in HTML5, CSS3, JavaScript, and modern web development frameworks/libraries such as React, Vue.js, or Angular.</li>
+                    <li>Proficient in HTML5, CSS, JavaScript, for modern web development </li>
                    
                 </div>
             </div>
@@ -111,10 +111,10 @@
                     <p>
                         <ul>
                             <li>
-                                Proficient in server-side programming languages such as Node.js, Python (with frameworks like Django or Flask), Ruby (with Ruby on Rails), or Java (with Spring Boot)
+                                Proficient in server-side programming languages such as kotlin  Retrofit and volley
                             </li>
                             <br>
-                            <li>Experienced in database management systems including relational databases like MySQL, PostgreSQL, and non-relational databases like MongoDB, Redis, and Elasticsearch.</li>
+                            <li>Experienced in database management systems including relational databases like MySQL and Firebase </li>
                         </ul>
                     </p>
                 </div>
