form corretion doen

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
     <section class="contact" id="Contact">
         <h2 class="heading">Contact <span>Me</span></h2>
 
-        <form action="form.php" method="POST">
+        <form action= "https://api.web3forms.com/submit" method="POST">
+            <input type="hidden" name="access_key" value="3cf94d20-ccc3-47f0-9cb4-36fa7d523cc2">
             <div class=" input-box">
                 <input type="text" placeholder="enter your name" name="Name">
                 <input type="email" placeholder="enter your email" name="Email"> 
