--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             <!-- <textarea name="Message" placeholder="Message"></textarea> -->
              <textarea name="" id="" cols="30" rows="10" placeholder="your message" name="Message"></textarea>
-            <input type="submit" value="send massage" class="btn">
+            <input type="submit" value="send message" class="btn">
         </form>
     </section>
     <footer>
